name:                aql
version:             0.1.0.0
synopsis:            strongly typed relational algebra
license:             BSD3
license-file:        LICENSE
author:              Jeremy Shaw
maintainer:          jeremy@n-heptane.com
category:            Database
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Relatable
  other-extensions:    TypeOperators, PolyKinds, DataKinds, KindSignatures, TypeFamilies, UndecidableInstances, MultiParamTypeClasses, FlexibleInstances, GADTs, FlexibleContexts, ScopedTypeVariables, ConstraintKinds
  build-depends:       base >=4.9 && <4.10,
                       bookkeeper,
--                       container,
                       ghc-prim >=0.5 && <0.6,
                       text >=1.2 && <1.3

  default-language:    Haskell2010
